--- a/Cidades/BR1.html
+++ b/Cidades/BR1.html
@@ -286,8 +286,33 @@
 
     #legendIDH{
       position: absolute;
-      margin-left: 50px;
-      margin-top: 400px;
+      margin-left: 10px;
+      margin-top: 220px;
+    }
+     #legendGINI{
+      position: absolute;
+      margin-left: 10px;
+      margin-top: 800px;
+    }
+     #legendRENDA{
+      position: absolute;
+      margin-left: 10px;
+      margin-top: 1560px;
+    }
+     #legendEDU{
+      position: absolute;
+      margin-left: 10px;
+      margin-top: 2290px;
+    }
+     #legendESP{
+      position: absolute;
+      margin-left: 10px;
+      margin-top: 3000px;
+    }
+     #legendMORT{
+      position: absolute;
+      margin-left: 10px;
+      margin-top: 3530px;
     }
 
 
@@ -314,14 +339,21 @@
                   </div><!--/.nav-collapse -->
                 </div>
               </nav>
+
+
+
+  <div id= "legendIDH"></div>
+  <div id= "legendGINI"></div>
+  <div id= "legendRENDA"></div> 
+  <div id= "legendEDU"></div>
+  <div id= "legendESP"></div>
+  <div id= "legendMORT"></div>
+   
   <div id="container-fluid" class="container">
     <header>
      <h1>Visão geral das cidades Brasileiras</h1>
 
    </header>
-
-   
-
 
    <br />
       <p>   Dentro do escopo do projeto Cidades Brasileiras, esta página apresenta uma visão geral de indicadores da qualidade de vida dos municípios brasileiros, demonstrando a distribuição geográfica de diversas mudanças no Brasil. Uma análise de indicadores como IDH, GINI, Renda per Capita e dados da criminalidade do Brasil, ao longo dos anos, demonstra o comportamento geral das mudanças na qualidade de vida dos brasileiros, entretanto a distribuição geográfica dessas mudanças não é uniforme, como podemos constatar nestas visualizações. <a href="http://www.atlasbrasil.org.br">aqui</a>.</p> 
@@ -337,8 +369,6 @@
     <div id= "IDHh1991"></div>
     <div id= "IDHh2000"></div>
     <div id= "IDHh2010"></div>
-
-    <div id= "legendIDH">teste</div>
 
 
    <br />
@@ -371,7 +401,7 @@
   <div id= "GINIh2000"></div>
   <div id= "GINIh2010"></div>
 
- <div id= "legendGINI"></div>
+
 
  <br />
  
@@ -405,8 +435,8 @@
  <div id= "Rendah1991"></div>
   <div id= "Rendah2000"></div>
   <div id= "Rendah2010"></div>
-  
-<div id= "legendRENDA"></div>
+
+
 
 <div id = "Leg_Renda">
 
@@ -437,7 +467,7 @@
  <div id= "EDUh1991"></div>
   <div id= "EDUh2000"></div>
   <div id= "EDUh2010"></div>
-<div id= "legendEDU"></div>
+
 
 <div id = "Leg_EDU">
 
@@ -466,7 +496,7 @@
  <div id= "ESPh1991"></div>
   <div id= "ESPh2000"></div>
   <div id= "ESPh2010"></div>
-<div id= "legendESP"></div>
+
 
 <div id = "Leg_ESP">
 
@@ -494,7 +524,7 @@
  <div id= "MORTh1991"></div>
   <div id= "MORTh2000"></div>
   <div id= "MORTh2010"></div>
-<div id= "legendMORT"></div>
+
 
 <div id = "Leg_MORT">
 
@@ -1082,7 +1112,7 @@ let ESPbrewerColors = colorbrewer.Blues[4];
     var legend_labels = ["IDH < 0.5", "0.5 < IDH <= 0.6", "0.6 < IDH <= 0.7", "0.7 < IDH <= 0.8", "IDH > 0.8"];     
     var text_color_domain = [0.5, 0.6, 0.7, 0.8, 1.0];
 
-    var svgLegendIDH = d3.select("legendIDH").append("svg")
+    var svgLegendIDH = d3.select("#legendIDH").append("svg")
       .attr("width", width)
       .attr("height", height)
       .style("margin", "10px auto");
@@ -1150,7 +1180,7 @@ let ESPbrewerColors = colorbrewer.Blues[4];
     var legend_labels = ["GINI < 0.25", "0.25 < GINI <= 0.5", "0.5 < GINI <= 0.75", "0.75 < GINI <= 1.0"];     
     var text_color_domain = [0.25, 0.5, 0.75, 1.0]; 
 
-    var svgLegendGINI = d3.select("legendGINI").append("svg")
+    var svgLegendGINI = d3.select("#legendGINI").append("svg")
       .attr("width", width)
       .attr("height", height)
       .style("margin", "10px auto");
@@ -1220,7 +1250,7 @@ let ESPbrewerColors = colorbrewer.Blues[4];
     var legend_labels = ["R < 250", "0.25 < R <= 500", "500 < R <= 0.75", "750 < R <= 1000", "R > 1000"];     
     var text_color_domain = [250, 500, 750, 1500, 2000];
 
-    var svgLegendRENDA = d3.select("legendRENDA").append("svg")
+    var svgLegendRENDA = d3.select("#legendRENDA").append("svg")
       .attr("width", width)
       .attr("height", height)
       .style("margin", "10px auto");
@@ -1290,7 +1320,7 @@ let ESPbrewerColors = colorbrewer.Blues[4];
     var legend_labels = ["Exp < 2.5a", "2.5 < Exp <= 5", "5 < Exp <= 7.5", "7.5 < Exp <= 10", "Exp > 10"];     
     var text_color_domain = [0, 0.25, 5, 7.5, 10];
 
-    var svgLegendEDU = d3.select("legendEDU").append("svg")
+    var svgLegendEDU = d3.select("#legendEDU").append("svg")
       .attr("width", width)
       .attr("height", height)
       .style("margin", "10px auto");
@@ -1359,7 +1389,7 @@ let ESPbrewerColors = colorbrewer.Blues[4];
     var legend_labels = ["Exp < 60a", "60 < Exp <= 70", "70 < Exp <= 80", "Exp > 80"];     
     var text_color_domain = [40,60,70,80,100];
 
-    var svgLegendESP = d3.select("legendESP").append("svg")
+    var svgLegendESP = d3.select("#legendESP").append("svg")
       .attr("width", width)
       .attr("height", height)
       .style("margin", "10px auto");
@@ -1428,7 +1458,7 @@ let ESPbrewerColors = colorbrewer.Blues[4];
     var legend_labels = ["Tx < 20", "20 < Tx <= 40", "40 < Tx <= 60", "60 < Tx <= 80", "80 < Tx <= 100", "Tx > 100"];     
     var text_color_domain = [20,40,60,80,100];
 
-    var svgLegendMORT = d3.select("legendMORT").append("svg")
+    var svgLegendMORT = d3.select("#legendMORT").append("svg")
      .attr("width", width)
       .attr("height", height)
       .style("margin", "10px auto");
