--- a/Cidades/index.html
+++ b/Cidades/index.html
@@ -94,13 +94,20 @@ crossorigin=""/>
             <br />
             <h4> Foram utilizadas as seguintes bases de Dados: </h4> 
 
-              <p>  IDHM, GINI, Renda per capta, População, 1990, 2000 e 2010 - Disponibilizada em consultas do <a href="http://atlasbrasil.org.br">Atlas Brasil</a>, saiba mais sobre o Atlas em <a href="http://atlasbrasil.org.br/2013/pt/o_atlas/o_atlas_/">aqui </a>.  </p>
+              <p>  IDHM, GINI, Renda per capta, População, Expectativa de Vida, Mortalidade Infantil, Expectativa de Escolaridade 1990, 2000 e 2010 - Disponibilizada em consultas do <a href="http://atlasbrasil.org.br">Atlas Brasil</a>, saiba mais sobre o Atlas em <a href="http://atlasbrasil.org.br/2013/pt/o_atlas/o_atlas_/">aqui </a>.  </p>
               <p>Dados dos Gestores Municipais com mandatos entre 2013 e 2016 - Disponibilizado para download nas estatísticas de perfins municipais 2013 do IBGE, encontrado <a href="https://downloads.ibge.gov.br/downloads_estatisticas.htm">aqui</a>.
               </p>
               <p>Dados dos Gastos municipais e aplicação de Leis - Disponibilizado para download nas estatísticas de perfins municipais do IBGE, encontrado <a href="https://downloads.ibge.gov.br/downloads_estatisticas.htm">aqui</a>.
               </p>
 
-          
+              <h4> Tecnologias/ferramentas utilizadas: </h4> 
+
+              <p>  D3: <a href="https://d3js.org/">aqui</a></p>
+              <p>  colorbrewer: <a href="http://colorbrewer2.org/">aqui</a></p>
+              <p>  topojson: <a href="https://d3js.org/topojson.v1.min.js">aqui</a></p>
+              <p>  Plot: <a href=" https://plot.ly/">aqui</a></p>
+
+              <p> Dentre outros </p>
 
 
             <script type="text/javascript">
